# YDBGUI

./: .gitlab-ci.yml  .gitpod.yml  CMakeLists.txt  Dockerfile  Dockerfile_dev  Dockerfile_test  README.md  package.json
docker-configuration/: dev  docker-startup.sh  docker-test.sh
docs/: libs.md  regions-parameters-list.md  rest.md  testing.md
routines/: CMakeLists.txt  TESTROUT.m  _weburl.m  _ydbgui.m  _ydbguiGde.m  _ydbguiLocks.m  _ydbguiRegions.m  _ydbguiRest.m  _ydbguiUtils.m
tools/: start.sh
tools/ci/: needs_copyright.sh
wwwroot/: index.html
wwwroot/css/: ydb-gui.css
wwwroot/html/: dlgDeviceInfo.html  dlgDumpResponse.html  dlgEnvVars.html  dlgInputbox.html  dlgLocksManager.html  dlgMsgbox.html  dlgRegionAdd.html  dlgRegionAddName.html  dlgRegionConfirmDelete.html  dlgRegionCreateDbFile.html  dlgRegionEdit.html  dlgRegionEditOverview.html  dlgRegionExtend.html  dlgRegionFilename.html  dlgRegionNameAdd.html  dlgRegionSelect.html  dlgRegionView.html  dlgRestartManager.html  dlgSystemInfo.html  dlgWait.html  navigation.html  scrDashboard.html
wwwroot/js/: RESTprocessor.js  main.js  menuHandlers.js  ui.js  uiDashboard.js  uiDeviceInfo.js  uiHelp.js  uiLocksManager.js  uiRegionUtils.js  uiRegionView.js  uiRestart.js  uiSystemInfo.js  userSettings.js
wwwroot/js/region/: uiRegionAdd.js  uiRegionEdit.js  uiRegionNames.js  uiRegionShared.js  uiRegionSharedManifest.js  uiRegionUtils.js  uiRegionView.js
wwwroot/libs/bootstrap-icons.1.8.0/: bootstrap-icons.css
wwwroot/libs/jstree-3.3.12/themes/proton/: style.css
wwwroot/test/: README.md  bootstrap.js  buildDocs.js  libs.js  mockData.js
wwwroot/test/test_files/: dashboard.js  devices.js  regionCreateNewFile.js  regionDelete.js  regionExtend.js  regionSelect.js  regionSwitchJournal.js  regionView.js  server.js  systemInfo.js
wwwroot/test/test_files/client/: dashboard.js  devices.js  locksManager.js  systemInfo.js
wwwroot/test/test_files/client/region/: regionAdd.js  regionCreateNewFile.js  regionDelete.js  regionEdit.js  regionExtend.js  regionSelect.js  regionSwitchJournal.js  regionView.js
wwwroot/test/test_files/server/: z-dashboard-server.js  z-gdeFunctions-server.js  z-locks-manager.js  z-region-server-edit.js  z-region-server.js
